--- a/css/MainDefault.css
+++ b/css/MainDefault.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /**
  * 首页样式
  * @authors Your Name (you@example.org)
@@ -7,26 +8,46 @@
  */
 
 .div_head {
-        width: 100%;
-        height: 100px;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        display: table-cell;
-        text-align: center;
-        vertical-align: middle;
-        border: 0px solid blue;
-        background-color: #89C1FC;
-    }
-    
-    .div_body {
-        width: 100%;
-        height: 500px;
-        overflow-y: auto;
-        margin: 0px;
-        text-align: left;
-        position: absolute;
-        top: 100px;
-        left: 0px;
-        border: 0px solid red;
-    }
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    border: 0px solid blue;
+    background-color: #89C1FC;
+}
+
+.div_body {
+    width: 100%;
+    height: 500px;
+    overflow-y: auto;
+    margin: 0px;
+    text-align: left;
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    border: 0px solid red;
+}
+
+.bodyleft {
+    width: auto;
+    padding: 0px 10px;
+}
+
+.a_nounderline {
+    text-decoration: none;
+}
+
+.div_detail {
+    width: 80%;
+    height: auto;
+    border: 1px solid #ccc;
+    background-color: #F5F5F5;
+    text-align: left;
+    margin: 10px 0px;
+    padding: 10px;
+    font-size: 14px;
+}
