--- a/css/MainDefault.css
+++ b/css/MainDefault.css
@@ -22,7 +22,7 @@
 
 .div_body {
     width: 100%;
-    height: 500px;
+    /*height: 500px;*/
     overflow-y: auto;
     margin: 0px;
     text-align: left;
@@ -50,4 +50,25 @@
     margin: 10px 0px;
     padding: 10px;
     font-size: 14px;
+}
+
+
+/*时钟样式*/
+
+.div_click {
+    width: 250px;
+    height: 90px;
+    position: fixed;
+    top: 61px;
+    right: 0px;
+    background-color: #ccc;
+    opacity: .3;
+}
+
+.div_click_1 {
+    width: 160px;
+    height: 70px;
+    margin: 0px 45px 20px;
+    /*background-color: #ccc;*/
+    opacity: 1;
 }
