--- a/css/MainDefault.css
+++ b/css/MainDefault.css
@@ -23,12 +23,12 @@
 .div_body {
     width: 100%;
     /*height: 500px;*/
-    overflow-y: auto;
-    margin: 0px;
+    /*overflow-y: auto;*/
+    margin: 100px 0 0 0;
     text-align: left;
-    position: absolute;
-    top: 100px;
-    left: 0px;
+    /*position: relative;*/
+    /*top: 100px;*/
+    /*left: 0px;*/
     border: 0px solid red;
     background-color: #FEFEF2;
 }
